[project]
name = "valstorm-mcp"
version = "0.1.0"
description = "Valstorm Model Context Protocol Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/valstorm_mcp"]
